[package]
name = "hamsando-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15.6"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
config = "0.15.11"
directories = "6.0.0"
env_logger = { version = "0.11.8", optional = true }
hamsando = { git = "https://github.com/FintasticMan/hamsando.git", version = "0.1.0" }
itertools = "0.14.0"
log = { version = "0.4.27", features = ["std"] }
pnet = "0.35.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
syslog = { version = "7.0.0", optional = true }
url = { version = "2.5.4", features = ["serde"] }

[features]
default = ["env_logger"]
env_logger = ["dep:env_logger"]
syslog = ["dep:syslog"]
