[package]
name = "hamsando-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.25"
directories = "6.0.0"
env_logger = { version = "0.11.11", optional = true }
hamsando = "0.2.0"
itertools = "0.15.0"
log = { version = "0.4.33", features = ["std"] }
pnet = "0.35.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
syslog = { version = "7.0.0", optional = true }
url = { version = "2.5.8", features = ["serde"] }

[features]
default = ["env_logger"]
env_logger = ["dep:env_logger"]
syslog = ["dep:syslog"]
